--- a/plugins/light/library.properties
+++ b/plugins/light/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=Ron Lisle
 license=BSD
 sentence=Extend PhotonHome to support dimmable lights.
-paragraph=PHLight provides support for dimmable lights that are automatically discoverable by Home Assistant.
+paragraph=PHLight provides support for Home Assistant MQTT discoverable dimmable lights using a PWM pin on a Particle.io Photon device.
 url=http://www.github.com/rlisle/PhotonHome
 repository=http://www.github.com/rlisle/PhotonHome
 architectures=particle-photon
